--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/LimeChain/ethereum-transaction-debugger"
+  },
+  "author": "http://www.limechain.tech",
   "license": "ISC",
   "dependencies": {
     "fast-levenshtein": "^2.0.6",
