--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "remote-redux-devtools": "^0.5.12",
     "reselect-tree": "^1.2.0",
     "safe-eval": "^0.4.1",
-    "truffle-code-utils": "^1.1.3",
-    "truffle-decode-utils": "^1.0.1",
-    "truffle-decoder": "^1.0.2",
-    "truffle-solidity-utils": "^1.2.1",
+    "truffle-code-utils": "1.1.3",
+    "truffle-decode-utils": "1.0.1",
+    "truffle-decoder": "1.0.2",
+    "truffle-solidity-utils": "1.2.1",
     "ethers": "4.0.21"
   }
 }
