--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "json-pointer": "^0.6.0",
     "json-stable-stringify": "^1.0.1",
     "node-interval-tree": "^1.3.3",
-    "redux": "^3.7.2",
-    "redux-cli-logger": "^2.0.1",
-    "redux-saga": "^0.16.0",
-    "remote-redux-devtools": "^0.5.12",
+    "redux": "3.7.2",
+    "redux-cli-logger": "2.0.1",
+    "redux-saga": "0.16.0",
+    "remote-redux-devtools": "0.5.12",
     "reselect-tree": "^1.2.0",
     "safe-eval": "^0.4.1",
     "truffle-code-utils": "1.1.3",
