--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "remote-redux-devtools": "0.5.12",
     "reselect-tree": "^1.2.0",
     "safe-eval": "^0.4.1",
-    "truffle-code-utils": "1.1.3",
-    "truffle-decode-utils": "1.0.4",
-    "truffle-decoder": "1.0.6",
-    "truffle-solidity-utils": "1.2.1",
+    "truffle-code-utils": "^1.1.4",
+    "truffle-decode-utils": "^1.0.4",
+    "truffle-decoder": "^1.0.6",
+    "truffle-solidity-utils": "^1.2.2",
     "ethers": "4.0.21"
   },
   "devDependencies": {
