--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "truffle-decode-utils": "^1.0.4",
     "truffle-decoder": "^1.0.6",
     "truffle-solidity-utils": "^1.2.2",
-    "ethers": "4.0.21"
+    "ethers": "4.0.21",
+    "bn.js": "^4.11.8"
   },
   "devDependencies": {
     "async": "2.6.1",
