--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "truffle-solidity-utils": "^1.2.2",
     "ethers": "4.0.21",
     "bn.js": "^4.11.8",
-    "debug": "^4.1.0"
+    "debug": "^4.1.0",
+    "web3": "1.0.0-beta.37"
   },
   "devDependencies": {
     "async": "2.6.1",
