--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ethereum-transaction-debugger",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "main": "dist/debugger.js",
   "scripts": {
@@ -18,17 +18,19 @@
     "json-pointer": "^0.6.0",
     "json-stable-stringify": "^1.0.1",
     "node-interval-tree": "^1.3.3",
-    "redux": "3.7.2",
-    "redux-cli-logger": "2.0.1",
+    "redux": "^3.7.2",
+    "redux-cli-logger": "^2.0.1",
     "redux-saga": "1.0.0",
-    "remote-redux-devtools": "0.5.12",
-    "reselect-tree": "^1.2.0",
+    "remote-redux-devtools": "^0.5.12",
+    "reselect-tree": "^1.3.0",
     "safe-eval": "^0.4.1",
-    "truffle-code-utils": "1.1.3",
-    "truffle-decode-utils": "1.0.2",
-    "truffle-decoder": "1.0.3",
-    "truffle-solidity-utils": "1.2.1",
-    "ethers": "4.0.21"
+    "truffle-code-utils": "^1.1.4",
+    "truffle-decode-utils": "^1.0.4",
+    "truffle-decoder": "^1.0.6",
+    "truffle-solidity-utils": "^1.2.2",
+    "ethers": "4.0.21",
+    "bn.js": "^4.11.8",
+    "debug": "^4.1.0"
   },
   "devDependencies": {
     "async": "2.6.1",
