--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "safe-eval": "^0.4.1",
     "truffle-code-utils": "^1.1.4",
     "truffle-decode-utils": "^1.0.4",
-    "truffle-decoder": "^1.0.6",
+    "truffle-decoder": "^2.0.1",
     "truffle-solidity-utils": "^1.2.2",
-    "ethers": "4.0.21",
+    "ethers": "^4.0.27",
     "bn.js": "^4.11.8",
     "debug": "^4.1.0"
   },
