--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "remote-redux-devtools": "^0.5.12",
     "reselect-tree": "^1.3.0",
     "safe-eval": "^0.4.1",
-    "truffle-code-utils": "^1.1.4",
-    "truffle-decode-utils": "^1.0.4",
-    "truffle-decoder": "^2.0.1",
-    "truffle-solidity-utils": "^1.2.2",
+    "truffle-code-utils": "1.1.4",
+    "truffle-decode-utils": "1.0.4",
+    "truffle-decoder": "2.0.1",
+    "truffle-solidity-utils": "1.2.2",
     "ethers": "^4.0.27",
     "bn.js": "^4.11.8",
     "debug": "^4.1.0"
