--- a/package.json
+++ b/package.json
@@ -22,15 +22,19 @@
     "redux-cli-logger": "^2.0.1",
     "redux-saga": "1.0.0",
     "remote-redux-devtools": "^0.5.12",
-    "reselect-tree": "^1.3.0",
+    "reselect-tree": "^1.3.1",
     "safe-eval": "^0.4.1",
-    "truffle-code-utils": "1.1.4",
-    "truffle-decode-utils": "1.0.4",
-    "truffle-decoder": "2.0.1",
-    "truffle-solidity-utils": "1.2.2",
+    "@truffle/code-utils": "^1.2.14",
+    "@truffle/codec": "^0.4.2",
+    "@truffle/compile-solidity": "^4.2.25",
+    "@truffle/expect": "^0.0.13",
+    "@truffle/solidity-utils": "^1.2.8",
     "ethers": "^4.0.27",
     "bn.js": "^4.11.8",
-    "debug": "^4.1.0"
+    "debug": "^4.1.0",
+    "lodash.flatten": "^4.4.0",
+    "lodash.sum": "^4.0.2",
+    "semver": "^6.3.0"
   },
   "devDependencies": {
     "async": "2.6.1",
